tailwind add, remove starter template

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,6 +11,8 @@
     "composite": true,
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+    "target": "ESNext",
+    "lib": ["ESNext"],
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
